--- a/locale/po/bg_music.pot
+++ b/locale/po/bg_music.pot
@@ -1,21 +1,22 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# Copyright (C) 2025 Pivert
 # This file is distributed under the same license as the bg_music package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Pivert <fun@pivert.org>, 2025.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: bg_music\n"
+"Project-Id-Version: bg_music 1.2.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-09-18 23:30+0000\n"
+"POT-Creation-Date: 2025-09-19 12:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Last-Translator: Pivert <fun@pivert.org>\n"
+"Language-Team: French\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: init.lua
 msgid "Music is currently disabled for you. Use @1 to enable it."
@@ -143,6 +144,10 @@ msgstr ""
 
 #: init.lua
 msgid "Volume must be between @1 and @2"
+msgstr ""
+
+#: init.lua
+msgid "Player not found"
 msgstr ""
 
 #: init.lua
