--- a/locale/po/es.po
+++ b/locale/po/es.po
@@ -4,12 +4,12 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: bg_music\n"
+"Project-Id-Version: bg_music 1.2.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-09-18 23:30+0000\n"
-"PO-Revision-Date: 2025-09-18 23:35+0000\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
+"POT-Creation-Date: 2025-09-19 12:00+0000\n"
+"PO-Revision-Date: 2025-09-19 12:00+0000\n"
+"Last-Translator: Pivert <fun@pivert.org>\n"
+"Language-Team: Spanish\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -143,6 +143,10 @@ msgstr "El radio extra debe ser un número no negativo"
 #: init.lua
 msgid "Volume must be between @1 and @2"
 msgstr "El volumen debe estar entre @1 y @2"
+
+#: init.lua
+msgid "Player not found"
+msgstr "Jugador no encontrado"
 
 #: init.lua
 msgid "Background music location set at @1 with trigger radius @2 and extra radius @3"
