--- a/locale/po/fr.po
+++ b/locale/po/fr.po
@@ -4,12 +4,12 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: bg_music\n"
+"Project-Id-Version: bg_music 1.2.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-09-18 23:30+0000\n"
-"PO-Revision-Date: 2025-09-18 23:35+0000\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
+"POT-Creation-Date: 2025-09-19 12:00+0000\n"
+"PO-Revision-Date: 2025-09-19 12:00+0000\n"
+"Last-Translator: Pivert <fun@pivert.org>\n"
+"Language-Team: French\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -74,7 +74,7 @@ msgstr "Lecture : @1"
 
 #: init.lua
 msgid "Play a song by number (from /listmusic) or name. Use 'all' to play globally"
-msgstr "Jouer une chanson par numéro (depuis /listmusic) ou par nom. Utilisez 'all' pour jouer globalement"
+msgstr "Jouer une chanson par numéro (depuis /listmusic) ou nom. Utilisez 'all' pour jouer globalement"
 
 #: init.lua
 msgid "No players available to hear the music (all have disabled music)"
@@ -118,7 +118,7 @@ msgstr "Aucune musique en cours de lecture"
 
 #: init.lua
 msgid "Disable all background music for yourself"
-msgstr "Désactiver toute musique de fond pour vous"
+msgstr "Désactiver toute la musique de fond pour vous"
 
 #: init.lua
 msgid "Enable background music for yourself"
@@ -143,6 +143,10 @@ msgstr "Le rayon supplémentaire doit être un nombre positif ou nul"
 #: init.lua
 msgid "Volume must be between @1 and @2"
 msgstr "Le volume doit être entre @1 et @2"
+
+#: init.lua
+msgid "Player not found"
+msgstr "Joueur introuvable"
 
 #: init.lua
 msgid "Background music location set at @1 with trigger radius @2 and extra radius @3"
@@ -190,7 +194,7 @@ msgstr "Fichiers musicaux disponibles"
 
 #: init.lua
 msgid "Available music files (filter: @1):"
-msgstr "Fichiers musicaux disponibles (filtre : @1) :"
+msgstr "Fichiers musicaux disponibles (filtre : @1):"
 
 #: init.lua
 msgid "Manually trigger a rescan of the music folder"
