--- a/locale/bg_music.es.po
+++ b/locale/bg_music.es.po
@@ -17,193 +17,241 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Music is currently disabled for you. Use @1 to enable it."
 msgstr "La música está actualmente desactivada para ti. Usa @1 para activarla."
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Music is enabled for you. Use @1 to disable it."
 msgstr "La música está activada para ti. Usa @1 para desactivarla."
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Music disabled. You will no longer hear automatic background music."
 msgstr "Música desactivada. Ya no escucharás la música de fondo automática."
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Music enabled. You will now hear background music."
 msgstr "Música activada. Ahora escucharás la música de fondo."
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Failed to disable music."
 msgstr "Error al desactivar la música."
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Failed to enable music."
 msgstr "Error al activar la música."
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Set your personal music volume (0-100%)"
 msgstr "Establece tu volumen musical personal (0-100%)"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Usage: @1 <volume> (0-100)"
 msgstr "Uso: @1 <volumen> (0-100)"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Volume set to @1%"
 msgstr "Volumen establecido al @1%"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Volume must be between 0 and 100"
 msgstr "El volumen debe estar entre 0 y 100"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Music is disabled for you. Use @1 to enable it."
 msgstr "La música está desactivada para ti. Usa @1 para activarla."
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Stereo music stopped"
 msgstr "Música estéreo detenida"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "No music files found in sounds/ directory"
 msgstr "No se encontraron archivos de música en el directorio sounds/"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Playing: @1"
 msgstr "Reproduciendo: @1"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Play a song by number (from /listmusic) or name. Use 'all' to play globally"
 msgstr "Reproducir una canción por número (desde /listmusic) o nombre. Usa 'all' para reproducir globalmente"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "No players available to hear the music (all have disabled music)"
 msgstr "No hay jugadores disponibles para escuchar la música (todos han desactivado la música)"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "You have disabled music. Use @1 first."
 msgstr "Has desactivado la música. Usa @1 primero."
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Invalid song number. Use 1-@1"
 msgstr "Número de canción inválido. Usa 1-@1"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "No music available"
 msgstr "No hay música disponible"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Song not found: @1. Use @2 to see available songs"
 msgstr "Canción no encontrada: @1. Usa @2 para ver las canciones disponibles"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Player not found"
 msgstr "Jugador no encontrado"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Failed to play music"
 msgstr "Error al reproducir la música"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Stop all background music currently playing"
 msgstr "Detener toda la música de fondo en reproducción"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Stopped @1 music instances"
 msgstr "Detenidas @1 instancias de música"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "No music currently playing"
 msgstr "No hay música reproduciéndose actualmente"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Disable all background music for yourself"
 msgstr "Desactiva toda la música de fondo para ti"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Enable background music for yourself"
 msgstr "Activa la música de fondo para ti"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Set background music at current position. radius_trigger: distance where music starts (meters). extra_radius: additional distance where music stops (meters). volume: 5-99 (default 65). filter: optional song filter (supports wildcards, | for OR, ! for NOT)."
 msgstr "Establecer música de fondo en la posición actual. radio_activación: distancia donde comienza la música (metros). radio_extra: distancia adicional donde se detiene la música (metros). volumen: 5-99 (predeterminado 65). filtro: filtro opcional de canciones (admite comodines, | para O, ! para NO)."
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Usage: @1 <radius_trigger> <extra_radius> [<volume>] [<filter>]"
 msgstr "Uso: @1 <radio_activación> <radio_extra> [<volumen>] [<filtro>]"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Radius trigger must be a positive number"
 msgstr "El radio de activación debe ser un número positivo"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Extra radius must be a non-negative number"
 msgstr "El radio extra debe ser un número no negativo"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Volume must be between @1 and @2"
 msgstr "El volumen debe estar entre @1 y @2"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Player not found"
 msgstr "Jugador no encontrado"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Background music location set at @1 with trigger radius @2 and extra radius @3"
 msgstr "Ubicación de música de fondo establecida en @1 con radio de activación @2 y radio extra @3"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Background music location set at @1 with trigger radius @2 and extra radius @3 (filter: @4)"
 msgstr "Ubicación de música de fondo establecida en @1 con radio de activación @2, radio extra @3 (filtro: @4)"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "List all background music locations with coordinates, radius, volume, and filters"
 msgstr "Listar todas las ubicaciones de música de fondo con coordenadas, radio, volumen y filtros"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "No background music locations defined"
 msgstr "No hay ubicaciones de música de fondo definidas"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Background music locations:"
 msgstr "Ubicaciones de música de fondo:"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Invalid index. Use @1 to see valid indices"
 msgstr "Índice inválido. Usa @1 para ver índices válidos"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Removed background music location at @1"
 msgstr "Eliminada ubicación de música de fondo en @1"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "List available music files with optional filter (supports wildcards, | for OR, ! for NOT)"
 msgstr "Listar archivos de música disponibles con filtro opcional (admite comodines, | para O, ! para NO)"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "(Rescanned: @1 → @2 songs) "
 msgstr "(Reescaneado: @1 → @2 canciones) "
 
 #: init.lua
+msgctxt "bg_music"
 msgid "No songs match the filter: @1"
 msgstr "Ninguna canción coincide con el filtro: @1"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Available music files"
 msgstr "Archivos de música disponibles"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Available music files (filter: @1):"
 msgstr "Archivos de música disponibles (filtro: @1):"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Manually trigger a rescan of the music folder"
 msgstr "Activar manualmente un reescaneo de la carpeta de música"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Music folder rescanned. Found @1 songs (was @2)"
 msgstr "Carpeta de música reescaneada. Encontradas @1 canciones (eran @2)"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Music Stereo"
 msgstr "Estéreo Musical"
