--- a/locale/bg_music.it.po
+++ b/locale/bg_music.it.po
@@ -17,193 +17,241 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Music is currently disabled for you. Use @1 to enable it."
 msgstr "La musica è attualmente disattivata per te. Usa @1 per attivarla."
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Music is enabled for you. Use @1 to disable it."
 msgstr "La musica è attivata per te. Usa @1 per disattivarla."
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Music disabled. You will no longer hear automatic background music."
 msgstr "Musica disattivata. Non sentirai più la musica di sottofondo automatica."
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Music enabled. You will now hear background music."
 msgstr "Musica attivata. Ora sentirai la musica di sottofondo."
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Failed to disable music."
 msgstr "Impossibile disattivare la musica."
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Failed to enable music."
 msgstr "Impossibile attivare la musica."
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Set your personal music volume (0-100%)"
 msgstr "Imposta il tuo volume musicale personale (0-100%)"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Usage: @1 <volume> (0-100)"
 msgstr "Uso: @1 <volume> (0-100)"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Volume set to @1%"
 msgstr "Volume impostato al @1%"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Volume must be between 0 and 100"
 msgstr "Il volume deve essere compreso tra 0 e 100"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Music is disabled for you. Use @1 to enable it."
 msgstr "La musica è disattivata per te. Usa @1 per attivarla."
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Stereo music stopped"
 msgstr "Musica stereo fermata"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "No music files found in sounds/ directory"
 msgstr "Nessun file musicale trovato nella directory sounds/"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Playing: @1"
 msgstr "In riproduzione: @1"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Play a song by number (from /listmusic) or name. Use 'all' to play globally"
 msgstr "Riproduci una canzone per numero (da /listmusic) o nome. Usa 'all' per riprodurre globalmente"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "No players available to hear the music (all have disabled music)"
 msgstr "Nessun giocatore disponibile per ascoltare la musica (tutti hanno disattivato la musica)"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "You have disabled music. Use @1 first."
 msgstr "Hai disattivato la musica. Usa @1 prima."
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Invalid song number. Use 1-@1"
 msgstr "Numero di canzone non valido. Usa 1-@1"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "No music available"
 msgstr "Nessuna musica disponibile"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Song not found: @1. Use @2 to see available songs"
 msgstr "Canzone non trovata: @1. Usa @2 per vedere le canzoni disponibili"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Player not found"
 msgstr "Giocatore non trovato"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Failed to play music"
 msgstr "Impossibile riprodurre la musica"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Stop all background music currently playing"
 msgstr "Ferma tutta la musica di sottofondo in riproduzione"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Stopped @1 music instances"
 msgstr "Fermate @1 istanze musicali"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "No music currently playing"
 msgstr "Nessuna musica in riproduzione"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Disable all background music for yourself"
 msgstr "Disattiva tutta la musica di sottofondo per te"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Enable background music for yourself"
 msgstr "Attiva la musica di sottofondo per te"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Set background music at current position. radius_trigger: distance where music starts (meters). extra_radius: additional distance where music stops (meters). volume: 5-99 (default 65). filter: optional song filter (supports wildcards, | for OR, ! for NOT)."
 msgstr "Imposta la musica di sottofondo nella posizione corrente. raggio_attivazione: distanza dove la musica inizia (metri). raggio_extra: distanza aggiuntiva dove la musica si ferma (metri). volume: 5-99 (predefinito 65). filtro: filtro opzionale per canzoni (supporta caratteri jolly, | per O, ! per NON)."
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Usage: @1 <radius_trigger> <extra_radius> [<volume>] [<filter>]"
 msgstr "Uso: @1 <raggio_attivazione> <raggio_extra> [<volume>] [<filtro>]"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Radius trigger must be a positive number"
 msgstr "Il raggio di attivazione deve essere un numero positivo"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Extra radius must be a non-negative number"
 msgstr "Il raggio extra deve essere un numero non negativo"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Volume must be between @1 and @2"
 msgstr "Il volume deve essere compreso tra @1 e @2"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Player not found"
 msgstr "Giocatore non trovato"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Background music location set at @1 with trigger radius @2 and extra radius @3"
 msgstr "Posizione musica di sottofondo impostata su @1 con raggio di attivazione @2 e raggio extra @3"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Background music location set at @1 with trigger radius @2 and extra radius @3 (filter: @4)"
 msgstr "Posizione musica di sottofondo impostata su @1 con raggio di attivazione @2, raggio extra @3 (filtro: @4)"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "List all background music locations with coordinates, radius, volume, and filters"
 msgstr "Elenca tutte le posizioni musica di sottofondo con coordinate, raggio, volume e filtri"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "No background music locations defined"
 msgstr "Nessuna posizione musica di sottofondo definita"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Background music locations:"
 msgstr "Posizioni musica di sottofondo:"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Invalid index. Use @1 to see valid indices"
 msgstr "Indice non valido. Usa @1 per vedere gli indici validi"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Removed background music location at @1"
 msgstr "Rimossa posizione musica di sottofondo su @1"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "List available music files with optional filter (supports wildcards, | for OR, ! for NOT)"
 msgstr "Elenca i file musicali disponibili con filtro opzionale (supporta caratteri jolly, | per O, ! per NON)"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "(Rescanned: @1 → @2 songs) "
 msgstr "(Riscansionato: @1 → @2 canzoni) "
 
 #: init.lua
+msgctxt "bg_music"
 msgid "No songs match the filter: @1"
 msgstr "Nessuna canzone corrisponde al filtro: @1"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Available music files"
 msgstr "File musicali disponibili"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Available music files (filter: @1):"
 msgstr "File musicali disponibili (filtro: @1):"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Manually trigger a rescan of the music folder"
 msgstr "Attiva manualmente una nuova scansione della cartella musicale"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Music folder rescanned. Found @1 songs (was @2)"
 msgstr "Cartella musicale riscansionata. Trovate @1 canzoni (erano @2)"
 
 #: init.lua
+msgctxt "bg_music"
 msgid "Music Stereo"
 msgstr "Stereo Musicale"
