--- a/locale/bg_music.fr.po
+++ b/locale/bg_music.fr.po
@@ -93,6 +93,11 @@ msgstr "Jouer une chanson par numéro (depuis /listmusic) ou nom. Utilisez 'all'
 
 #: init.lua
 msgctxt "bg_music"
+msgid "You need the 'setmusic' privilege to play music globally"
+msgstr "Vous avez besoin du privilège 'setmusic' pour jouer la musique globalement"
+
+#: init.lua
+msgctxt "bg_music"
 msgid "No players available to hear the music (all have disabled music)"
 msgstr "Aucun joueur disponible pour entendre la musique (tous ont désactivé la musique)"
 
